# enem-word-embeddings

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/1-raw/: 2016.csv
data/extracted_questions/: enem_2015.csv  enem_2016.csv  enem_2017.csv  enem_2021.csv  enem_2022.csv  enem_2023.csv
data/merged_data/: enem_2012.csv  enem_2013.csv  enem_2014.csv  enem_2015.csv  enem_2016.csv  enem_2017.csv  enem_2019.csv  enem_2021.csv  enem_2022.csv  enem_2023.csv
notebooks/: Data_Analysis.ipynb  Data_Merge.ipynb  Text_Extraction.ipynb
