[tool.poetry]
name = "enem-word-embeddings"
version = "0.1.0"
description = ""
authors = ["ciziks <luciziks@hotmail.com>"]
readme = "README.md"
packages = [{include = "enem_word_embeddings"}]

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.25.4"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
